--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "rootDir": ".",
+    "outDir": "./build",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "strictNullChecks": true,
@@ -11,6 +15,7 @@
     "alwaysStrict": true,
     "esModuleInterop": true,
     "declaration": true,
+    "sourceMap": true
   },
-  "include": ["/**/*"]
+  "include": ["./**/*"]
 }
