feat: backend with Typescript added

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,7 +15,8 @@
     "alwaysStrict": true,
     "esModuleInterop": true,
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "useUnknownInCatchVariables": true
   },
   "include": ["./**/*"]
 }
