--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,9 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev src/server.ts",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx} --ignore-pattern build --ignore-pattern dist",
-    "start": "node build/src/index.js",
+    "start": "node build/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.19",
     "@types/swagger-ui-express": "^4.1.8",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose-to-swagger": "^1.5.1",
     "swagger-jsdoc": "^6.2.8",
