--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/ban-ts-comment": "warn",
     "@typescript-eslint/no-inferrable-types": "off",
-    "no-console": "warn",
+    "no-console": "off",
     "eqeqeq": ["error", "always"],
     "curly": "error",
     "semi": ["error", "always"],
