--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node index.ts",
-    "lint": "eslint --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc",
+    "dev": "ts-node-dev src/server.ts",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx} --ignore-pattern build --ignore-pattern dist",
+    "start": "node build/src/server.js",
+    "test": "cross-env NODE_ENV=test jest --coverage --testTimeout=50000 --runInBand"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -20,13 +22,28 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "cross-env": "^10.0.0",
     "eslint": "^9.32.0",
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "@types/cors": "^2.8.19",
+    "@types/swagger-ui-express": "^4.1.8",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongoose-to-swagger": "^1.5.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.0.15"
   }
 }
