--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -78,7 +78,7 @@ jobs:
         working-directory: ./backend
 
       - name: Build backend
-        run: npm run tsc
+        run: npm run build
         working-directory: ./backend
 
   test-backend:
@@ -99,7 +99,7 @@ jobs:
       - name: Run backend tests
         run: npm run test
         working-directory: ./backend
-        
+
   e2e-tests:
     needs: test-backend
     runs-on: ubuntu-latest
