--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,6 +64,8 @@ jobs:
 
   build-backend:
     runs-on: ubuntu-latest
+    env:
+      MONGODB_TEST_URI: ${{ secrets.MONGODB_TEST_URI }}
     steps:
       - uses: actions/checkout@v4
       
