working with pipeline.yml #6

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -81,7 +81,6 @@ jobs:
         working-directory: ./backend
 
   test-backend:
-    needs: build-backend
     runs-on: ubuntu-latest
     env:
       MONGODB_TEST_URI: ${{ secrets.MONGODB_TEST_URI }}
@@ -102,7 +101,6 @@ jobs:
         working-directory: ./backend
 
   e2e-tests:
-    needs: test-backend
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -113,6 +111,11 @@ jobs:
       - name: Install e2e dependencies
         run: npm install
         working-directory: ./e2e
+      - name: Start backend server
+        run: npm run start
+        working-directory: ./backend
+        env:
+          MONGODB_TEST_URI: ${{ secrets.MONGODB_TEST_URI }}
       - name: Run Cypress tests
         uses: cypress-io/github-action@v5
         with:
