--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -111,6 +111,9 @@ jobs:
       - name: Install e2e dependencies
         run: npm install
         working-directory: ./e2e
+      - name: Build backend
+        run: npm run build
+        working-directory: ./backend
       - name: Start backend server
         run: npm run start
         working-directory: ./backend
