--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,6 +61,13 @@ jobs:
         run: npm install
         working-directory: ./e2e
 
+      - name: Start frontend dev server in background
+        run: npm run dev &
+        working-directory: ./frontend
+
+      - name: Wait for frontend to be ready
+        run: npx wait-on http://localhost:5173
+
       - name: Start backend server in background
         run: npm run start &
         working-directory: ./backend
