--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -90,3 +90,46 @@ jobs:
           curl -X GET \
             -H "Accept: application/json" \
             "https://api.render.com/deploy/${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}"
+
+      - name: Notify success
+        if: success()
+        run: |
+          curl -X POST ${{ secrets.DISCORD_WEBHOOK }} \
+          -H "Content-Type: application/json" \
+          -d '{"content": "✅ 11.20 Deployment succeeded!- by alkisax"}'
+
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v4
+        with:
+          url: https://one1-20simpletodo.onrender.com
+          follow-redirect: true
+          max-attempts: 5
+          retry-delay: 10s
+
+  tag_release:
+    needs: [ci-pipeline]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'  
+    - name: Bump version and push tag
+      env:
+        CONDITION: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BUMP: patch
+      if: ${{ github.event_name == 'push'  && env.CONDITION == 'false'}}
+      uses: anothrNick/github-tag-action@e528bc2b9628971ce0e6f823f3052d1dcd9d512c
+
+  notify-on-failure:
+    if: failure()
+    needs: [ci-pipeline]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify failure
+        run: |
+          curl -X POST ${{ secrets.DISCORD_WEBHOOK }} \
+          -H "Content-Type: application/json" \
+          -d '{"content": "❌ Build or tests failed!- by alkisax"}'
