test version/notify discord/health url #6

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,8 +3,8 @@ name: Deployment pipeline
 on:
   push:
     branches:
-      - main
-      # - wip
+      # - main
+      - wip
   pull_request:
     branches:
       - main
