--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Always fail (for testing)
-        run: exit 1
+      # - name: Always fail (for testing)
+      #   run: exit 1
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
