--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,10 +1,10 @@
 name: Deployment pipeline
 
 on:
-  push:
-    branches:
-      # - main
-      - wip
+  # push:
+  #   branches:
+  #     - main
+  #     - wip
   pull_request:
     branches:
       - main
